--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,11 +11,7 @@
     <meta name="Description" content="Makes Your WordPress's life easy with a cool BREEZE">
     <title>React Project</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--<link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Niramit:500" crossorigin>-->
-    <!--<link href="https://fonts.googleapis.com/css?family=Niramit:500" rel="stylesheet">-->
-    <link rel="preload" as="style" href="%PUBLIC_URL%/css/fonts.css" crossorigin>
-    <link href="%PUBLIC_URL%/css/fonts.css" rel="stylesheet" crossorigin>
-
+    <link href="https://fonts.googleapis.com/css?family=Gayathri&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
