--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <meta name="Description" content="Makes Your WordPress's life easy with a cool BREEZE">
     <title>React Project</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Gayathri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chilanka|Gayathri|Dancing+Script&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
