--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="Description" content="Makes Your WordPress's life easy with a cool BREEZE">
     <title>React Project</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Chilanka|Gayathri|Dancing+Script&display=swap" rel="stylesheet">
     <title>React App</title>
+    <script>
+    </script>
+
   </head>
   <body>
   <noscript>
